# algorithm

./: .gitignore  CMakeLists.txt  data_generator.cpp  data_generator.py  in.txt  out.txt  statistic.py  tmp.cpp  tmp.txt  tmp2.cpp
acwing/dsu on tree/: acwing_3189.cpp
acwing/knapsack/: acwing_5.cpp
acwing/knapsack problem/: acwing_4.cpp  acwing_9.cpp
acwing/other/: acwing_2060.cpp
acwing/seg_tree_split/: acwing_3419.cpp
codeforces/lying_greedy/: CF865D.cpp
csp/201312/: 201312-1.cpp  201312-2.cpp  201312-3.cpp  201312-4.cpp  201312-5.cpp
csp/201403/: 201403-1.cpp  201403-2.cpp  201403-3.cpp  201403-4.cpp  201403-5.cpp
csp/201409/: 201409-1.cpp  201409-2.cpp  201409-3.cpp  201409-4.cpp  201409-5.cpp
csp/201412/: 201412-1.cpp  201412-2.cpp  201412-3.cpp
csp/201604/: 201604-2.cpp
csp/201609/: 201609-1.cpp  201609-2.cpp  201609-3.cpp  201609-4.cpp
csp/201612/: 201612-1.cpp  201612-2.cpp  201612-3.cpp  201612-4.cpp  201612-5.cpp
csp/201703/: 201703-1.cpp  201703-2.cpp  201703-3.cpp  201703-4.cpp  201703-5.cpp
csp/201709/: 201709-1.cpp  201709-2.cpp  201709-3.cpp  201709-4.cpp  201709-5.cpp
csp/201712/: 201712-1.cpp  201712-2.cpp  201712-3.cpp  201712-4.cpp
csp/201803/: 201803-1.cpp  201803-2.cpp  201803-3.cpp  201803-4.cpp
csp/201809/: 201809-1.cpp  201809-2.cpp  201809-4.cpp  201809-5.cpp
csp/201812/: 201812-1.cpp  201812-2.cpp  201812-4.cpp
csp/201903/: 201903-1.cpp  201903-2.cpp  201903-4.cpp  201903-5.cpp
csp/201909/: 201909-1.cpp  201909-2.cpp  201909-4.cpp
csp/201912/: 201912-1.cpp  201912-2.cpp  201912-3.cpp
csp/202006/: 202006-1.cpp  202006-2.cpp  202006-4.cpp
csp/202009/: 202009-1.cpp  202009-2.cpp
daimayuan/mamomo_spring_camp_2022_daily/: 323.cpp  61.cpp
dgut/: dgut_54.cpp  dgut_72.cpp
dgut/other/: dgut_110.cpp
dgut/practice/: dgut_113.cpp
dgutoj/: 111.cpp  112.cpp  35.cpp  78.cpp  87.cpp  93.cpp
hdu/: hdu_1003.cpp  hdu_1058.cpp  hdu_1069_1.cpp  hdu_1087.cpp  hdu_1213.cpp  hdu_1358.cpp  hdu_1686 .cpp  hdu_1711.cpp  hdu_2084 .cpp  hdu_2087.cpp  hdu_2243.cpp  hdu_2594.cpp  hdu_2896.cpp  hdu_3038.cpp  hdu_3065_1.cpp  hdu_3746.cpp  hdu_7123.cpp
hdu/ac automachine/: hdu_2896.cpp
hdu/ccpc/: 1001.cpp  1006.cpp  1009.cpp
hdu/ccpc2021/: 1002.cpp
hdu/ccpc2021(re)/: 1011.cpp
hdu/dp/: hdu_1024.cpp  hdu_1069.cpp  hdu_1087_1.cpp  hdu_1114.cpp  hdu_1176.cpp  hdu_1176_1.cpp
lanqiao/2016 C++A Provincial/: t1.cpp  t2.cpp  t3_ans.cpp  t7.cpp  t7_ans.cpp  t8.cpp
lanqiao/2016_C++A-Provincial/: t3.cpp  t6.cpp  t6_ans.cpp  t9.cpp
lanqiao/2017 C++A Provincial/: t1.cpp  t2.cpp  t2_ans.cpp  t7.cpp  t8.cpp  t9.cpp
lanqiao/2017_C++A-Provincial/: t4.cpp
lanqiao/2018 C++A Provincial/: t10.cpp  t6.cpp  t7.cpp
lanqiao/2018_C++A-Provincial/: t3.cpp  t4.cpp  t8.cpp  t9.cpp
lanqiao/2019 C++A Provincial/: t4.cpp  t7.cpp  t9.cpp
lanqiao/2019_C++A-Provincial/: t1.cpp  t2.cpp  t6.cpp  t8.cpp
lanqiao/2020A C++A Provincial/: t3.cpp  t6.cpp  t7.cpp  t9.cpp
lanqiao/2020A_C++A-Provincial/: t10.cpp  t8.cpp
lanqiao/2020B_C++A-Provincial/: t8.cpp
lanqiao/2021A_C++A-Provincial/: t5.cpp
lanqiao/2022_C++B-Provincial/: t0.cpp  t1.cpp  t2.cpp  t3.cpp  t3_dp.cpp  t3_dpdata.cpp  t4.cpp  t5.cpp  t6.cpp  t6_dp.cpp  t6_dpdata.cpp  t7.cpp  t8.cpp  t8_gt.cpp  t9.cpp
lanqiao/old exams/: PREV-64.cpp
lanqiao/old_exams/: PREV-23.cpp  PREV-57.cpp  PREV-63.cpp  PREV-65.cpp
lanqiao/other/: 九宫幻方.cpp  二色图判断.cpp  产生后台数据.cpp  兰顿蚂蚁.cpp  减数游戏.cpp  分巧克力.cpp  分糖果.cpp  分考场.cpp  划分数.cpp  包子凑数.cpp  区间位移.cpp  区间内的素数.cpp  双六.cpp  发现环.cpp  合并石子.cpp  合成数.cpp  合根植物.cpp  回文数字.cpp  国王的烦恼.cpp  图形排版.cpp  城市建设.cpp  填字母游戏.cpp  填字母游戏1.cpp  多重部分和问题.cpp  多重部分和问题2.cpp  多重集组合数.cpp  完全背包.cpp  对局匹配.cpp  小数第n位.cpp  小秘密.cpp  广场.cpp  拉马车.cpp  指派问题.cpp  数列.cpp  数字游戏.cpp  数数.cpp  斐波那契.cpp  斐波那契数列.cpp  旅行商问题.cpp  日期问题.cpp  (+118 more)
leetcode/Pony.ai-2021AUT/: 001.cpp  003.cpp  005.cpp  006.cpp
leetcode/meituan-2021AUT/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp
loj/practice/: 144.cpp  145.cpp  146.cpp  147.cpp
luogu/binary/: P2115.cpp
luogu/euler graph/: P2731.cpp
luogu/linear basis/: P4151.cpp
luogu/lying greedy/: P4053.cpp
luogu/lying_greedy/: P2949.cpp
luogu/matrix/: P2213.cpp
luogu/maximum_flow/: P3305.cpp
luogu/minimum_spanning_tree/: P2872.cpp
luogu/persistent seg tree/: P3919.cpp
luogu/persistent_tree/: P3834.cpp
luogu/seg tree split/: P5494.cpp
nowcoder/: NC200324.cpp  NC50439.cpp
nowcoder/dp/: NC200324.cpp
nowcoder/math/: NC222874.cpp
nowcoder/other/: NC50439.cpp
poj/: poj_1017.cpp  poj_1065.cpp  poj_1251.cpp  poj_1258.cpp  poj_1273.cpp  poj_1287.cpp  poj_1321.cpp  poj_1426.cpp  poj_1611.cpp  poj_1631.cpp  poj_1704.cpp  poj_1751.cpp  poj_1862.cpp  poj_2010.cpp  poj_2031.cpp  poj_2139.cpp  poj_2186.cpp  poj_2236.cpp  poj_2251.cpp  poj_2253.cpp  poj_2311.cpp  poj_2349.cpp  poj_2376.cpp  poj_2385.cpp  poj_2392.cpp  poj_2393.cpp  poj_2395.cpp  poj_2406.cpp  poj_2728.cpp  poj_2777.cpp  poj_2778.cpp  poj_2778_1.cpp  poj_2976.cpp  poj_3009.cpp  poj_3040.cpp  poj_3045.cpp  poj_3050.cpp  poj_3126.cpp  poj_3160.cpp  poj_3176.cpp  (+18 more)
poj/base algorithm/: poj_2566.cpp
poj/binary/: poj_3104.cpp  poj_3258.cpp
poj/dp/: poj_1742.cpp  poj_2184.cpp  poj_2229.cpp  poj_3046.cpp
poj/dsu/: poj_1182.cpp  poj_1703.cpp  poj_2236.cpp  poj_2421.cpp
poj/game/: poj_1704.cpp  poj_2348.cpp  poj_2484.cpp
poj/greedy/: poj_1017.cpp  poj_1328.cpp
poj/kmp/: poj_2406.cpp  poj_2752.cpp
poj/math/: poj_2311.cpp  poj_3126.cpp
poj/min spanning tree/: poj_1789.cpp  poj_2349.cpp  poj_2377.cpp
poj/other/: poj_1426.cpp  poj_1979.cpp  poj_3279.cpp  poj_3579.cpp
poj/seg_tree/: poj_2528.cpp
poj/shortest path/: poj_2387.cpp
poj/shortest_path/: poj_1797.cpp  poj_1860.cpp
template/: Seg.cpp  bellman-ford.cpp  floyd.cpp  gauss.cpp  lca.cpp  linear basis.cpp  matrix qpow.cpp  persistent seg tree.cpp  prime factorization.cpp  qread.cpp  seg.cpp  string_hash.cpp  tarjan-scc.cpp
template/computational_geometry/: computational_geometry.cpp
template/data structure/: linear basis.cpp  (+2 more)
(+1614 files in other folders)
