cmake_minimum_required(VERSION 3.20)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)
add_definitions(-DLOCAL)
MATH(EXPR stack_size "204800000")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_executable(tmp tmp.cpp)

add_executable(acwing_321 acwing/improvement_course/1_dp/1.6_interval/acwing_321.cpp)
add_executable(acwing_1072 acwing/improvement_course/1_dp/1.7_tree/acwing_1072.cpp)
add_executable(acwing_1073 acwing/improvement_course/1_dp/1.7_tree/acwing_1073.cpp)
add_executable(acwing_1075 acwing/improvement_course/1_dp/1.7_tree/acwing_1075.cpp)
add_executable(acwing_1074 acwing/improvement_course/1_dp/1.7_tree/acwing_1074.cpp)
add_executable(acwing_10 acwing/improvement_course/1_dp/1.3_knapsack/acwing_10.cpp)
add_executable(acwing_323 acwing/improvement_course/1_dp/1.7_tree/acwing_323.cpp)
add_executable(acwing_1077 acwing/improvement_course/1_dp/1.7_tree/acwing_1077.cpp)
add_executable(acwing_1081 acwing/improvement_course/1_dp/1.8_digit/acwing_1081.cpp)
add_executable(acwing_1082 acwing/improvement_course/1_dp/1.8_digit/acwing_1082.cpp)
add_executable(acwing_1083 acwing/improvement_course/1_dp/1.8_digit/acwing_1083.cpp)
add_executable(acwing_1084 acwing/improvement_course/1_dp/1.8_digit/acwing_1084.cpp)
add_executable(acwing_1085 acwing/improvement_course/1_dp/1.8_digit/acwing_1085.cpp)
add_executable(P1980 luogu/practice/dp/digit/P1980.cpp)
add_executable(B codeforces/contest/round/774/B.cpp)
add_executable(C codeforces/contest/round/774/C.cpp)

add_executable(D codeforces/contest/round/774/D.cpp)
add_executable(P2602 luogu/practice/dp/digit/P2602.cpp)
add_executable(E codeforces/contest/Hello_2022/E.cpp)
add_executable(acwing_1086 acwing/improvement_course/1_dp/1.8_digit/acwing_1086.cpp)

add_executable(acwing_1684 acwing/practice/winter_daily_2022/week_6/acwing_1684.cpp)
add_executable(acwing_1460 acwing/practice/winter_daily_2022/week_6/acwing_1460.cpp)
add_executable(acwing_1471 acwing/practice/winter_daily_2022/week_6/acwing_1471.cpp)

add_executable(acwing_135 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_135.cpp)
add_executable(acwing_1087 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_1087.cpp)
add_executable(acwing_1088 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_1088.cpp)
add_executable(acwing_1089 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_1089.cpp)
add_executable(acwing_1090 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_1090.cpp)
add_executable(acwing_1091 acwing/improvement_course/1_dp/1.9_monotonicity_queue/acwing_1091.cpp)
add_executable(acwing_1097 acwing/improvement_course/2_search/2.1_flood_fill/acwing_1097.cpp)
add_executable(acwing_300 acwing/improvement_course/1_dp/1.10_slope_optimization/acwing_300.cpp)
add_executable(acwing_1098 acwing/improvement_course/2_search/2.1_flood_fill/acwing_1098.cpp)
add_executable(acwing_1106 acwing/improvement_course/2_search/2.1_flood_fill/acwing_1106.cpp)
add_executable(acwing_1076 acwing/improvement_course/2_search/2.2_shortest_path/acwing_1076.cpp)
add_executable(acwing_188 acwing/improvement_course/2_search/2.2_shortest_path/acwing_188.cpp)
add_executable(acwing_1100 acwing/improvement_course/2_search/2.2_shortest_path/acwing_1100.cpp)
add_executable(acwing_173 acwing/improvement_course/2_search/2.3_multi_source_bfs/acwing_173.cpp)
add_executable(acwing_301 acwing/improvement_course/1_dp/1.10_slope_optimization/acwing_301.cpp)
add_executable(acwing_302 acwing/improvement_course/1_dp/1.10_slope_optimization/acwing_302.cpp)
add_executable(acwing_303 acwing/improvement_course/1_dp/1.10_slope_optimization/acwing_303.cpp)
add_executable(acwing_1107 acwing/improvement_course/2_search/2.4_minimum_step/acwing_1107.cpp)
add_executable(acwing_175 acwing/improvement_course/2_search/2.5_deque_bfs/acwing_175.cpp)
add_executable(acwing_190 acwing/improvement_course/2_search/2.6_double_bfs/acwing_190.cpp)
add_executable(acwing_1443 acwing/practice/winter_daily_2022/week_7/acwing_1443.cpp)
add_executable(acwing_1672 acwing/practice/winter_daily_2022/week_7/acwing_1672.cpp)
add_executable(acwing_1660 acwing/practice/winter_daily_2022/week_7/acwing_1660.cpp)
add_executable(acwing_3347 acwing/practice/winter_daily_2022/week_7/acwing_3347.cpp)
add_executable(acwing_178 acwing/improvement_course/2_search/2.7_A_star/acwing_178.cpp)
add_executable(acwing_179 acwing/improvement_course/2_search/2.7_A_star/acwing_179.cpp)
add_executable(acwing_1112 acwing/improvement_course/2_search/2.8_dfs_connection/acwing_1112.cpp)
add_executable(acwing_1113 acwing/improvement_course/2_search/2.8_dfs_connection/acwing_1113.cpp)
add_executable(acwing_1116 acwing/improvement_course/2_search/2.9_dfs_search_order/acwing_1116.cpp)
add_executable(acwing_1117 acwing/improvement_course/2_search/2.9_dfs_search_order/acwing_1117.cpp)
add_executable(acwing_1118 acwing/improvement_course/2_search/2.9_dfs_search_order/acwing_1118.cpp)
add_executable(acwing_165 acwing/improvement_course/2_search/2.10_dfs_prune/acwing_165.cpp)
add_executable(acwing_166 acwing/improvement_course/2_search/2.10_dfs_prune/acwing_166.cpp)
add_executable(acwing_167 acwing/improvement_course/2_search/2.10_dfs_prune/acwing_167.cpp)
add_executable(acwing_168 acwing/improvement_course/2_search/2.10_dfs_prune/acwing_168.cpp)

add_executable(acwing_170 acwing/improvement_course/2_search/2.11_iterative_deepening/acwing_170.cpp)
add_executable(acwing_171 acwing/improvement_course/2_search/2.12_double_dfs/acwing_171.cpp)
add_executable(acwing_180 acwing/improvement_course/2_search/2.13_IDA_star/acwing_180.cpp)
add_executable(acwing_181 acwing/improvement_course/2_search/2.13_IDA_star/acwing_181.cpp)
add_executable(acwing_1129 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_1129.cpp)
add_executable(acwing_1128 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_1128.cpp)
add_executable(acwing_1127 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_1127.cpp)
add_executable(acwing_1126 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_1126.cpp)
add_executable(acwing_920 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_920.cpp)
add_executable(acwing_903 acwing/improvement_course/3_graph/3.1_single_source_build_graph/acwing_903.cpp)
add_executable(acwing_1135 acwing/improvement_course/3_graph/3.2_single_source_applications/acwing_1135.cpp)
add_executable(acwing_340 acwing/improvement_course/3_graph/3.2_single_source_applications/acwing_340.cpp)
add_executable(acwing_342 acwing/improvement_course/3_graph/3.2_single_source_applications/acwing_342.cpp)
add_executable(acwing_341 acwing/improvement_course/3_graph/3.2_single_source_applications/acwing_341.cpp)
add_executable(acwing_341_gt acwing/improvement_course/3_graph/3.2_single_source_applications/acwing_341_gt.cpp)

add_executable(F codeforces/contest/global_round/19/F.cpp)

add_executable(CF896C codeforces/practice/ODT/CF896C.cpp)
add_executable(acwing_1137 acwing/improvement_course/3_graph/3.3_single_source_extensions/acwing_1137.cpp)
add_executable(acwing_1131 acwing/improvement_course/3_graph/3.3_single_source_extensions/acwing_1131.cpp)
add_executable(acwing_1134 acwing/improvement_course/3_graph/3.3_single_source_extensions/acwing_1134.cpp)
add_executable(acwing_383 acwing/improvement_course/3_graph/3.3_single_source_extensions/acwing_383.cpp)
add_executable(poj_3255 poj/shortest_path/poj_3255.cpp)
add_executable(acwing_343 acwing/improvement_course/3_graph/3.4_floyd/acwing_343.cpp)
add_executable(acwing_1125 acwing/improvement_course/3_graph/3.4_floyd/acwing_1125.cpp)
add_executable(acwing_344 acwing/improvement_course/3_graph/3.4_floyd/acwing_344.cpp)
add_executable(acwing_345 acwing/improvement_course/3_graph/3.4_floyd/acwing_345.cpp)

add_executable(acwing_1140 acwing/improvement_course/3_graph/3.5_minimum_spanning_tree/acwing_1140.cpp)
add_executable(G atcoder/contest/abc/240/G.cpp)
add_executable(acwing_1141 acwing/improvement_course/3_graph/3.5_minimum_spanning_tree/acwing_1141.cpp)
add_executable(acwing_1142 acwing/improvement_course/3_graph/3.5_minimum_spanning_tree/acwing_1142.cpp)
add_executable(acwing_1143 acwing/improvement_course/3_graph/3.5_minimum_spanning_tree/acwing_1143.cpp)
add_executable(acwing_1144 acwing/improvement_course/3_graph/3.5_minimum_spanning_tree/acwing_1144.cpp)

add_executable(acwing_1146 acwing/improvement_course/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1146.cpp)
add_executable(acwing_1145 acwing/improvement_course/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1145.cpp)
add_executable(acwing_346 acwing/improvement_course/3_graph/3.6_minimum_spanning_tree_extensions/acwing_346.cpp)
add_executable(acwing_1148 acwing/improvement_course/3_graph/3.6_minimum_spanning_tree_extensions/acwing_1148.cpp)

add_executable(101 daimayuan/namomo_spring_camp_2022/daily/week_1/61.cpp)
add_executable(323 daimayuan/namomo_spring_camp_2022/daily/week_1/323.cpp)
add_executable(436 daimayuan/namomo_spring_camp_2022/daily/week_1/436.cpp)
add_executable(A codeforces/contest/round/774/A.cpp)

add_executable(acwing_904 acwing/improvement_course/3_graph/3.7_negative_ring/acwing_904.cpp)
add_executable(acwing_361 acwing/improvement_course/3_graph/3.7_negative_ring/acwing_361.cpp)
add_executable(1165 acwing/improvement_course/3_graph/3.7_negative_ring/acwing_1165.cpp)
add_executable(acwing_1169 acwing/improvement_course/3_graph/3.8_difference_constraints/acwing_1169.cpp)
add_executable(437 daimayuan/namomo_spring_camp_2022/daily/week_1/437.cpp)
add_executable(acwing_1170 acwing/improvement_course/3_graph/3.8_difference_constraints/acwing_1170.cpp)
add_executable(acwing_362 acwing/improvement_course/3_graph/3.8_difference_constraints/acwing_362.cpp)
add_executable(acwing_393 acwing/improvement_course/3_graph/3.8_difference_constraints/acwing_393.cpp)
add_executable(acwing_1172 acwing/improvement_course/3_graph/3.9_lca/acwing_1172.cpp)
add_executable(acwing_1171 acwing/improvement_course/3_graph/3.9_lca/acwing_1171.cpp)
add_executable(451 daimayuan/namomo_spring_camp_2022/daily/week_1/451.cpp)
add_executable(acwing_356 acwing/improvement_course/3_graph/3.9_lca/acwing_356.cpp)
add_executable(acwing_352 acwing/improvement_course/3_graph/3.9_lca/acwing_352.cpp)
add_executable(acwing_1174 acwing/improvement_course/3_graph/3.10_scc/acwing_1174.cpp)
add_executable(acwing_367 acwing/improvement_course/3_graph/3.10_scc/acwing_367.cpp)
add_executable(acwing_1175 acwing/improvement_course/3_graph/3.10_scc/acwing_1175.cpp)
add_executable(acwing_368 acwing/improvement_course/3_graph/3.10_scc/acwing_368.cpp)
add_executable(acwing_395 acwing/improvement_course/3_graph/3.11_dcc/acwing_395.cpp)
add_executable(acwing_1183 acwing/improvement_course/3_graph/3.11_dcc/acwing_1183.cpp)
add_executable(acwing_396 acwing/improvement_course/3_graph/3.11_dcc/acwing_396.cpp)
add_executable(P2704 luogu/practice/dp/P2704.cpp)
add_executable(acwing_292 acwing/bluebook/0x50_dp/0x56_state_compression_dp/acwing_292.cpp)
add_executable(acwing_257 acwing/improvement_course/3_graph/3.12_bipartite_graph/acwing_257.cpp)
add_executable(456 daimayuan/namomo_spring_camp_2022/daily/week_1/456.cpp)
add_executable(CF1574A codeforces/practice/dfs/CF1574A.cpp)
add_executable(acwing_372 acwing/improvement_course/3_graph/3.12_bipartite_graph/acwing_372.cpp)
add_executable(acwing_376 acwing/improvement_course/3_graph/3.12_bipartite_graph/acwing_376.cpp)
add_executable(acwing_378 acwing/improvement_course/3_graph/3.12_bipartite_graph/acwing_378.cpp)
add_executable(acwing_379 acwing/improvement_course/3_graph/3.12_bipartite_graph/acwing_379.cpp)
add_executable(acwing_1123 acwing/improvement_course/3_graph/3.13_euler_graph/acwing_1123.cpp)
add_executable(acwing_1184 acwing/improvement_course/3_graph/3.13_euler_graph/acwing_1184.cpp)
add_executable(acwing_1124 acwing/improvement_course/3_graph/3.13_euler_graph/acwing_1124.cpp)
add_executable(acwing_1185 acwing/improvement_course/3_graph/3.13_euler_graph/acwing_1185.cpp)
add_executable(acwing_452 daimayuan/namomo_spring_camp_2022/daily/week_1/452.cpp)
add_executable(CF1199D codeforces/practice/other/CF1199D.cpp)
add_executable(CF103470H daimayuan/namomo_spring_camp_2022/week_1/H_Crystalfly_2021_Nanjing.cpp)
add_executable(C_Werewolves_2021_SEERC daimayuan/namomo_spring_camp_2022/week_1/C_Werewolves_2021_SEERC.cpp)
add_executable(acwing_1191 acwing/improvement_course/3_graph/3.14_topo/acwing_1191.cpp)
add_executable(acwing_1192 acwing/improvement_course/3_graph/3.14_topo/acwing_1192.cpp)
add_executable(acwing_164 acwing/improvement_course/3_graph/3.14_topo/acwing_164.cpp)
add_executable(acwing_456 acwing/improvement_course/3_graph/3.14_topo/acwing_456.cpp)
add_executable(acwing_1250 acwing/improvement_course/4._data_structures/4.1_dsu/acwing_1250.cpp)
add_executable(acwing_1252 acwing/improvement_course/4._data_structures/4.1_dsu/acwing_1252.cpp)
add_executable(acwing_237 acwing/improvement_course/4._data_structures/4.1_dsu/acwing_237.cpp)
add_executable(acwing_239 acwing/improvement_course/4._data_structures/4.1_dsu/acwing_239.cpp)
add_executable(acwing_238 acwing/improvement_course/4._data_structures/4.1_dsu/acwing_238.cpp)
add_executable(464 daimayuan/namomo_spring_camp_2022/daily/week_1/464.cpp)
add_executable(454 daimayuan/namomo_spring_camp_2022/daily/week_1/454.cpp)
add_executable(acwing_244 acwing/improvement_course/4._data_structures/4.2_bit/acwing_244.cpp)
add_executable(acwing_241 acwing/improvement_course/4._data_structures/4.2_bit/acwing_241.cpp)
add_executable(acwing_242 acwing/improvement_course/4._data_structures/4.2_bit/acwing_242.cpp)
add_executable(acwing_243 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_243.cpp)

add_executable(CF1573E daimayuan/namomo_spring_camp_2022/week_1/CF1573E.cpp)
add_executable(P4766 daimayuan/namomo_spring_camp_2022/week_1/P4766.cpp)
add_executable(A_Namomo_Subsequence_2020_EC_Final daimayuan/namomo_spring_camp_2022/week_2/A_Namomo_Subsequence_2020_EC_Final.cpp)
add_executable(G_Damaged_Bicycle_2021_CCPC_Harbin daimayuan/namomo_spring_camp_2022/week_2/G_Damaged_Bicycle_2021_CCPC_Harbin.cpp)
add_executable(Cow_Camp_2022USACO_February_Contest_Gold daimayuan/namomo_spring_camp_2022/week_2/B_Cow_Camp_USACO_2022_Feb_Gold.cpp)
add_executable(P3188 daimayuan/namomo_spring_camp_2022/week_2/P3188.cpp)
add_executable(466 daimayuan/namomo_spring_camp_2022/daily/week_2/466.cpp)
add_executable(467 daimayuan/namomo_spring_camp_2022/daily/week_2/467.cpp)
add_executable(468 daimayuan/namomo_spring_camp_2022/daily/week_2/468.cpp)
add_executable(497 daimayuan/namomo_spring_camp_2022/daily/week_2/497.cpp)
add_executable(CF1417E codeforces/practice/trie/CF1417E.cpp)
add_executable(469 daimayuan/namomo_spring_camp_2022/daily/week_2/469.cpp)
add_executable(P1972 luogu/practice/bit/P1972.cpp)
add_executable(P4113 luogu/practice/bit/P4113.cpp)
add_executable(501 daimayuan/namomo_spring_camp_2022/daily/week_2/501.cpp)
add_executable(504 daimayuan/namomo_spring_camp_2022/daily/week_3/504.cpp)
add_executable(503 daimayuan/namomo_spring_camp_2022/daily/week_3/503.cpp)
add_executable(P1280 luogu/practice/dp/P1280.cpp)
add_executable(P1352 luogu/practice/dp/P1352.cpp)
add_executable(505 daimayuan/namomo_spring_camp_2022/daily/week_3/505.cpp)
add_executable(acwing_1275 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_1275.cpp)
add_executable(acwing_245 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_245.cpp)
add_executable(acwing_1016 acwing/improvement_course/1_dp/1.2_lis/acwing_1016.cpp)

add_executable(acwing_246 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_246.cpp)

add_executable(acwing_247 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_247.cpp)
add_executable(acwing_1277 acwing/improvement_course/4._data_structures/4.3_seg_tree/acwing_1277.cpp)